added body to css

--- a/css/main-css/style.css
+++ b/css/main-css/style.css
@@ -1,1 +1,5 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  margin: 0 0;
+  padding: 0 0;
+}
+/*# sourceMappingURL=style.css.map */
