--- a/css/main-css/style.css
+++ b/css/main-css/style.css
@@ -2,4 +2,77 @@ body {
   margin: 0 0;
   padding: 0 0;
 }
+
+#top-row {
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  background-color: red;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+#bottom-row {
+  position: fixed;
+  top: 100px;
+  height: 100px;
+  background-color: green;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.cards {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: .1em .2em;
+  width: 46px;
+  height: 65px;
+  background-image: url("../../images/bicyclecard.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-attachment: inherit;
+  background-position: center;
+}
+
+#button-container {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(../../images/wood2.jpg);
+}
+
+button {
+  background-color: 0;
+  width: 200px;
+}
 /*# sourceMappingURL=style.css.map */
