--- a/css/main-css/style.scss
+++ b/css/main-css/style.scss
@@ -2,3 +2,57 @@ body {
     margin: 0 0;
     padding: 0 0;
 }
+
+#top-row {
+    position: fixed;
+    top: 0px;
+    height: 100px;
+    background-color: red;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+#bottom-row {
+    position: fixed;
+    top: 100px;
+    height: 100px;
+    background-color: green;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.cards {
+    box-sizing: border-box;
+    margin: .1em .2em;
+    width: 46px;
+    height: 65px;
+    background-image: url("../../images/bicyclecard.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: inherit;
+    background-position: center;
+}
+
+#button-container {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../../images/wood2.jpg)
+}
+
+button {
+    background-color: blue($color: #000000);
+    width: 200px;
+}
