--- a/css/main-css/style.css
+++ b/css/main-css/style.css
@@ -1,13 +1,13 @@
 body {
   margin: 0 0;
   padding: 0 0;
+  background-color: #008528;
 }
 
 #top-row {
   position: fixed;
   top: 0px;
   height: 100px;
-  background-color: red;
   width: 100%;
   margin: 0 auto;
   display: -webkit-box;
@@ -26,7 +26,7 @@ body {
   position: fixed;
   top: 100px;
   height: 100px;
-  background-color: green;
+  background-color: #008528;
   width: 100%;
   margin: 0 auto;
   display: -webkit-box;
@@ -44,14 +44,160 @@ body {
 .cards {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: .1em .2em;
-  width: 46px;
-  height: 65px;
+  border-radius: 2px;
+  margin: .1em .1em;
+  width: 42px;
+  height: 60px;
+  background-color: #007400;
+}
+
+.full {
   background-image: url("../../images/bicyclecard.jpg");
   background-size: contain;
   background-repeat: no-repeat;
-  background-attachment: inherit;
   background-position: center;
+  border: solid black 1px;
+}
+
+.empty {
+  visibility: hidden;
+}
+
+.ace-stack .flipped-card {
+  position: absolute;
+}
+
+#bottom-row .cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: repeat 14, 20px;
+      grid-template-rows: repeat 14, 20px;
+}
+
+.unknown-cards {
+  border-radius: 2px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: solid black 1px;
+  width: 42px;
+  height: 60px;
+  background-image: url("../../images/bicyclecard.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / span 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / span 1;
+}
+
+.unknown-card {
+  display: none;
+}
+
+.flipped-card {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / span 1;
+  border-radius: 2px;
+  background-color: blue;
+  width: 42px;
+  height: 60px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: solid black 1px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#bottom-row .cards .flipped-card {
+  position: relative;
+  top: -10px;
+}
+
+.cards .flipped-card:nth-of-type(even) {
+  background-color: red;
+}
+
+.cards .flipped-card:nth-of-type(1) {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(2) {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 3;
+  grid-row: 3 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(3) {
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 3;
+  grid-row: 4 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(4) {
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 3;
+  grid-row: 5 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(5) {
+  -ms-grid-row: 6;
+  -ms-grid-row-span: 3;
+  grid-row: 6 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(6) {
+  -ms-grid-row: 7;
+  -ms-grid-row-span: 3;
+  grid-row: 7 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(7) {
+  -ms-grid-row: 8;
+  -ms-grid-row-span: 3;
+  grid-row: 8 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(8) {
+  -ms-grid-row: 9;
+  -ms-grid-row-span: 3;
+  grid-row: 9 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(9) {
+  -ms-grid-row: 10;
+  -ms-grid-row-span: 3;
+  grid-row: 10 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(10) {
+  -ms-grid-row: 11;
+  -ms-grid-row-span: 3;
+  grid-row: 11 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(11) {
+  -ms-grid-row: 12;
+  -ms-grid-row-span: 3;
+  grid-row: 12 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(12) {
+  -ms-grid-row: 13;
+  -ms-grid-row-span: 3;
+  grid-row: 13 / span 3;
+}
+
+.cards .flipped-card:nth-of-type(13) {
+  -ms-grid-row: 14;
+  -ms-grid-row-span: 3;
+  grid-row: 14 / span 3;
 }
 
 #button-container {
@@ -72,7 +218,31 @@ body {
 }
 
 button {
-  background-color: 0;
-  width: 200px;
+  z-index: 3;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 35%;
+  outline: none;
+  margin: 10px 10px;
+  padding: 5px 5px;
+  width: 100px;
+  border: none;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 0 10px;
+          box-shadow: 0 0 10px;
+  font-weight: bold;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(15%, #d6d6d6), to(#757575));
+  background-image: linear-gradient(#d6d6d6 15%, #757575);
+}
+
+button:active {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#d6d6d6));
+  background-image: linear-gradient(#757575, #d6d6d6);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#empty-space {
+  visibility: hidden;
 }
 /*# sourceMappingURL=style.css.map */
