--- a/css/main-css/style.css
+++ b/css/main-css/style.css
@@ -51,19 +51,7 @@ body {
   background-color: #007400;
 }
 
-.full {
-  background-image: url("../../images/bicyclecard.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: solid black 1px;
-}
-
-.empty {
-  visibility: hidden;
-}
-
-.ace-stack .flipped-card {
+.ace-stack .flipped-card, #flipped-deck .flipped-card {
   position: absolute;
 }
 
@@ -102,24 +90,22 @@ body {
   -ms-grid-column-span: 1;
   grid-column: 1 / span 1;
   border-radius: 2px;
-  background-color: blue;
+  padding: 0 1px;
   width: 42px;
   height: 60px;
+  background-color: white;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: solid black 1px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-}
-
-#bottom-row .cards .flipped-card {
-  position: relative;
-  top: -10px;
-}
-
-.cards .flipped-card:nth-of-type(even) {
-  background-color: red;
+  font-weight: bold;
+  font-size: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .cards .flipped-card:nth-of-type(1) {
@@ -244,5 +230,32 @@ button:active {
 
 #empty-space {
   visibility: hidden;
+}
+
+#remaining-cards:empty {
+  background-image: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 2px;
+  margin: .1em .1em;
+  width: 42px;
+  height: 60px;
+  background-color: #007400;
+  border: none;
+}
+
+#remaining-cards:not(:empty) {
+  border-radius: 2px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px 1px 3px 3px;
+  width: 43px;
+  height: 61px;
+  background-image: url("../../images/bicyclecard.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 /*# sourceMappingURL=style.css.map */
